force-app/main/default/objects/Attendees__c/Attendees__c.object-meta.xml
<CustomObject>
    <description>The people going to festivel</description>
    <label>Attendee</label>
    <nameField>
        <label>Atendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendee</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>