force-app/main/default/objects/Attendees__c/fields/Festival__c.field-meta.xml
<CustomField>
    <fullName>Festival__c</fullName>
    <label>Festival</label>
    <referenceTo>Festival__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>