force-app/main/default/objects/Attendees__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>Customer Phone number</description>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>