force-app/main/default/objects/Attendees__c/fields/purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>purchase_Date__c</fullName>
    <description>Available date</description>
    <label>purchase Date</label>
    <type>Date</type>
</CustomField>