force-app/main/default/objects/Attendees__c/fields/Purchase_siurce__c.field-meta.xml
<CustomField>
    <fullName>Purchase_siurce__c</fullName>
    <description>Where customers got ticket</description>
    <label>Purchase siurce</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boxoffice</fullName>
            </value>
            <value>
                <fullName>Bookmyshow</fullName>
            </value>
            <value>
                <fullName>facebook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>