force-app/main/default/objects/Attendees__c/fields/Tickets_purchesed__c.field-meta.xml
<CustomField>
    <fullName>Tickets_purchesed__c</fullName>
    <label>Tickets purchesed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>